# Red-ducky

./: BOM.csv  JOURNAL.md  README.md
CAD/: red_ducky-case.f3d  red_ducky.step
Firmware/: Dependencies.txt
Firmware/Firmware/: CMakeLists.txt  cdc_input.c  cdc_input.h  layout.c  layout.h  main.c  parser.c  parser.h  script_storage.c  script_storage.h  tusb_config.h  usb_descriptors.c
PCB/: custom_rubber_ducky.3mf  red_ducky.kicad_pcb  red_ducky.kicad_pro  red_ducky.kicad_sch  red_ducky.wrl
PCB/PRODUCTION/: BOM.csv  CPL.csv
